--- a/index.html
+++ b/index.html
@@ -5,25 +5,25 @@
 </head>
 
 <body>
-    <h1>Welcome to the Full-Stack Bootcamp by CODED!</h1>
+    <h1>SECOND DAY AT CODED BOOTCAMP!</h1>
     <h2>My name is</h2>
-    <h3>Fulan Al-Fulani</h3>
+    <h3>Shahad Al Mashan</h3>
 
-    <p>I love CODED, and I'm willing to learn lots of cool stuff!</p>
+    <p>I'm trying to shift my career into computer science, and this bootcamp is my first step.</p>
 
     <p>My goals out of this bootcamp are:</p>
     <ol>
         <li>How to write good code</li>
-        <li>Get employed</li>
-        <li>Be able to freelance</li>
-        <li>Do my own startup</li>
+        <li>Learn computer science basics</li>
+        <li>Be able to show off and look like a hacker</li>
+        <li>Get into a computer science masters program</li>
     </ol>
 
     <button onclick="toggleColor()">Change Appearance</button>
     <br />
     <button onclick="beGentle()">be gentle</button>
     <br />
-    <button onclick="sare5()">SHOUT!</button>
+    <button onclick="shout()">SHOUT!</button>
     <br />
     <button onclick="fetchRandomName()">Generate random Name</button>
 
